Refactor code
Remove redundant exception handling in Board class

Refactor all methods for clean and understandable code

Provide clear documentation

Replace all getFirst and removeFirst for compatabillity with all java version